@@ -7243,8 +7243,9 @@ sub file_contents ($%)
 # -------------------
 # Foreach ($TOKEN, $VAL) in %PAIRS produce a replacement expression suitable
 # for file_contents which:
-#   - replaces @$TOKEN@ with $VALUE,
-#   - enables/disables ?$TOKEN?.
+#   - replaces %$TOKEN% with $VAL,
+#   - enables/disables ?$TOKEN? and ?!$TOKEN?,
+#   - replaces %?$TOKEN% with TRUE or FALSE.
 sub transform (%)
 {
     my (%pairs) = @_;
