@@ -1,5 +1,9 @@
 2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* automake.in (transform): Update documentation.
+
+2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	* m4/gcj.m4 (AM_PROG_GCJ): Define GCJFLAGS if unset.
 	Reported by Olivier Louchart-Fletcher <olivier@zipworld.com>.
 
